--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,14 @@ nav ul li a {
 
 .post button {
   border: 0;
+  border-radius: 5px;
   padding: 10px 20px;
   background-color: #0A64F2;
   color: #fff;
+}
+
+.post button:hover {
+  background-color: #2878fa;
 }
 
 .post h5 {
